added accessibility to  cart html

--- a/cart.html
+++ b/cart.html
@@ -88,12 +88,12 @@
     </nav>
     <main class="main cart">
         <div class="container">
-            <h2 class="cart__title">Cart</h2>
+            <h2 class="cart__title" tabindex="0">Cart</h2>
             <div class="cart-grid grid">
                 <div class="product-select">
                     <ul class="list-reset cart__list">
                         <li class="cart__item flex">
-                            <button class="btn-reset removeProduct">
+                            <button class="btn-reset removeProduct" aria-label="remove the product from cart">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -105,7 +105,7 @@
                                 <img src="assets/images/jacket-1.webp" alt="rainydays wear">
                             </div>
                             <div class="item__info">
-                                <h3 class="item__title-cp">Rain Jacket Pro</h3>
+                                <h3 class="item__title-cp" tabindex="0">Rain Jacket Pro</h3>
                                 <p class="item__details flex">
                                     <span>Color: Purple</span>
                                     <span>Size: XS</span>
@@ -119,7 +119,7 @@
                             </div>
                         </li>
                         <li class="cart__item flex">
-                            <button class="btn-reset removeProduct">
+                            <button class="btn-reset removeProduct" aria-label="remove the product from cart">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -131,7 +131,7 @@
                                 <img src="assets/images/jacket-3.webp" alt="rainydays wear">
                             </div>
                             <div class="item__info">
-                                <h3 class="item__title-cp">Sports Jacket pro</h3>
+                                <h3 class="item__title-cp" tabindex="0">Sports Jacket pro</h3>
                                 <p class="item__details flex">
                                     <span>Color: Purple</span>
                                     <span>Size: XS</span>
@@ -145,7 +145,7 @@
                             </div>
                         </li>
                         <li class="cart__item flex">
-                            <button class="btn-reset removeProduct">
+                            <button class="btn-reset removeProduct" aria-label="remove the product from cart">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -157,7 +157,7 @@
                                 <img src="assets/images/jacket-3.webp" alt="rainydays wear">
                             </div>
                             <div class="item__info">
-                                <h3 class="item__title-cp">Sports Jacket pro</h3>
+                                <h3 class="item__title-cp" tabindex="0">Sports Jacket pro</h3>
                                 <p class="item__details flex">
                                     <span>Color: Purple</span>
                                     <span>Size: XS</span>
@@ -171,7 +171,7 @@
                             </div>
                         </li>
                         <li class="cart__item flex">
-                            <button class="btn-reset removeProduct">
+                            <button class="btn-reset removeProduct" aria-label="remove the product from cart">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -183,7 +183,7 @@
                                 <img src="assets/images/jacket-3.webp" alt="rainydays wear">
                             </div>
                             <div class="item__info">
-                                <h3 class="item__title-cp">Sports Jacket pro</h3>
+                                <h3 class="item__title-cp" tabindex="0">Sports Jacket pro</h3>
                                 <p class="item__details flex">
                                     <span>Color: Purple</span>
                                     <span>Size: XS</span>
@@ -229,7 +229,7 @@
                 </form>
                 <div class="shipping">
                     <h2 class="shipping__title">Shipping</h2>
-                    <div class="shipping-btn-wrapper">
+                    <div class="shipping-btn-wrapper" aria-label="Choose shipping method">
                         <button class="btn-reset shippingType">
                             <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -248,7 +248,7 @@
                         </button>
                     </div>
                     <p class="shipping__desc">Estimated delivery time <span>2-4</span> days</p>
-                    <form class="shipping__address" id="address">
+                    <form class="shipping__address" id="address" tabindex="2">
                         <h3>Shipping address</h3>
                         <p>Locate in map or search</p>
                         <button class="btn-reset chooseLocation">
