add to cart complete functionality added

--- a/contacts.html
+++ b/contacts.html
@@ -55,7 +55,7 @@
                         <path d="M27.2649 2.96623C25.6745 1.28855 23.5662 0.264585 21.3209 0.0793095C19.0756 -0.105966 16.8414 0.559659 15.0218 1.95595C13.1128 0.462059 10.7367 -0.215343 8.372 0.0601574C6.00729 0.335657 3.82963 1.54359 2.27753 3.44072C0.725436 5.33784 -0.0857969 7.78324 0.00719494 10.2845C0.100187 12.7857 1.0905 15.1569 2.7787 16.9207L12.0961 26.7393C12.8763 27.5472 13.9271 28 15.0218 28C16.1165 28 17.1673 27.5472 17.9476 26.7393L27.2649 16.9207C29.0167 15.0663 30 12.558 30 9.94346C30 7.32894 29.0167 4.82061 27.2649 2.96623ZM25.1494 14.7423L15.832 24.5451C15.726 24.6578 15.5998 24.7472 15.4607 24.8082C15.3217 24.8692 15.1725 24.9007 15.0218 24.9007C14.8711 24.9007 14.722 24.8692 14.5829 24.8082C14.4438 24.7472 14.3176 24.6578 14.2116 24.5451L4.89424 14.6949C3.71757 13.4295 3.05868 11.7296 3.05868 9.95925C3.05868 8.18895 3.71757 6.48903 4.89424 5.22357C6.09327 3.97807 7.71041 3.27968 9.39538 3.27968C11.0803 3.27968 12.6975 3.97807 13.8965 5.22357C14.036 5.37152 14.2019 5.48896 14.3848 5.5691C14.5676 5.64924 14.7637 5.6905 14.9618 5.6905C15.1599 5.6905 15.356 5.64924 15.5388 5.5691C15.7216 5.48896 15.8876 5.37152 16.0271 5.22357C17.2261 3.97807 18.8432 3.27968 20.5282 3.27968C22.2132 3.27968 23.8303 3.97807 25.0294 5.22357C26.2222 6.47245 26.9027 8.16315 26.9251 9.9335C26.9476 11.7038 26.3101 13.413 25.1494 14.6949V14.7423Z" fill="black"/>
                     </svg>
                 </a>
-                <a class="icons__link" href="cart.html" aria-label="my cart">
+                <a class="icons__link cart-icon" href="cart.html" aria-label="my cart">
                     <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewbox="0 0 31 30" fill="none">
                         <g clip-path="url(#clip0_767_1627)">
                             <path d="M11.8203 27.5C12.5092 27.5 13.0677 26.9404 13.0677 26.25C13.0677 25.5596 12.5092 25 11.8203 25C11.1314 25 10.5729 25.5596 10.5729 26.25C10.5729 26.9404 11.1314 27.5 11.8203 27.5Z" stroke="#0A3641" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -327,4 +327,19 @@
     </footer>
 </body>
 <script src="js/media.js"></script>
+<script>
+    // Retrieve the cart from local storage
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+    // Calculate total quantity
+    const totalQuantity = cart.reduce((total, item) => total + item.quantity, 0);
+
+    if(totalQuantity != 0) {
+        // Update the data-quantity attribute if true
+        const cartIcon = document.querySelector('.cart-icon');
+        cartIcon.setAttribute('data-quantity', totalQuantity.toString());
+        // Apply active state to icon
+        cartIcon.classList.add('active');
+    }
+</script>
 </html>
