--- a/jacket.html
+++ b/jacket.html
@@ -60,7 +60,7 @@
                             fill="black" />
                     </svg>
                 </a>
-                <a class="icons__link" href="cart.html" aria-label="my cart">
+                <a class="icons__link cart-icon" href="cart.html" aria-label="my cart">
                     <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
                         <g clip-path="url(#clip0_767_1627)">
                             <path
@@ -713,5 +713,6 @@
     }
 </script>
 <script src="js/media.js"></script>
+<script src="js/addtocart.js"></script>
 
 </html>
