--- a/about.html
+++ b/about.html
@@ -553,7 +553,7 @@
         </div>
     </footer>
 </body>
-<script src="js/media.js"></script>
+<script src="js/burger.js"></script>
 <script>
     // Retrieve the cart from local storage
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
