--- a/cart.html
+++ b/cart.html
@@ -371,6 +371,6 @@
         </div>
     </footer>
 </body>
-<script src="js/media.js"></script>
+<script src="js/burger.js"></script>
 <script src="js/shoppingCart.js"></script>
 </html>
