--- a/index.html
+++ b/index.html
@@ -125,91 +125,103 @@
                 </div>
             </div>
         </div>
-        <div class="slide-container">
-            <div class="slide-content">
-                <div class="slide-wrapper flex">
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="red rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+        <div class="carousel-container">
+            <div class="carousel flex">
+                <div class="slide index0">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="red rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">The Yoko Jacke
-                            <br>$350.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index1">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Belgravia High Top
-                            <br>$250.00</p>
+                    <p class="slide-text">The Yoko Jacke
+                        <br>$350.00</p>
+                </div>
+                <div class="slide index2">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">MyGica Rain Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Belgravia High Top
+                        <br>$250.00</p>
+                </div>
+                <div class="slide index3">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Maxima hoodie
-                            <br>$100.00</p>
+                    <p class="slide-text">MyGica Rain Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index4">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-6.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Maxima hoodie
+                        <br>$100.00</p>
+                </div>
+                <div class="slide index5">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-6.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index6">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index7">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index8">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index9">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
                     </div>
-                    <div class="slide">
-                        <div class="slide-image">
-                            <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
-                        </div>
-                        <p class="slide-text">Fit Bomber Jacket
-                            <br>$200.00</p>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
+                </div>
+                <div class="slide index10">
+                    <div class="slide-image">
+                        <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
                     </div>
+                    <p class="slide-text">Fit Bomber Jacket
+                        <br>$200.00</p>
                 </div>
             </div>
             <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="prev-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="71" height="71" viewBox="0 0 71 71" fill="none">
+                    <g opacity="0.7">
+                    <rect width="70.0013" height="70" rx="35" transform="matrix(0.0129867 -0.999916 0.999995 0.00305023 0 69.9954)" fill="#EBBDA0"/>
+                    <path d="M48.891 49.4187C49.6311 48.998 50.0512 48.4258 50.0589 47.8278C50.0667 47.2298 49.6615 46.655 48.9324 46.2298L29.6824 35.0075L49.2224 23.9034C49.9417 23.4803 50.344 22.9118 50.3428 22.3205C50.3415 21.7291 49.9368 21.1622 49.2157 20.7419C48.4947 20.3215 47.5151 20.0814 46.4878 20.0731C45.4605 20.0648 44.4678 20.2891 43.7235 20.6977L21.3927 33.3877C20.6526 33.8084 20.2325 34.3806 20.2248 34.9786C20.217 35.5766 20.6222 36.1514 21.3512 36.5765L43.3507 49.4018C44.08 49.8268 45.0733 50.0674 46.1123 50.0705C47.1513 50.0737 48.1508 49.8392 48.891 49.4187Z" fill="#0A3641"/>
+                    </g>
+                </svg>
+            </div>
+            <div class="next-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71" fill="none">
+                    <g opacity="0.7">
+                    <rect width="70" height="70" rx="35" transform="matrix(0 1 -1 -0.000201209 70 0.0141602)" fill="#EBBDA0"/>
+                    <path d="M21.1472 20.6572C20.4126 21.08 20 21.6535 20 22.2516C20 22.8496 20.4126 23.4232 21.1472 23.8463L40.5423 35.0144L21.1472 46.1747C20.4335 46.5999 20.0385 47.1695 20.0475 47.7609C20.0564 48.3522 20.4685 48.918 21.1949 49.3363C21.9214 49.7546 22.9041 49.992 23.9315 49.9974C24.9588 50.0027 25.9486 49.7756 26.6875 49.3649L48.8528 36.6106C49.5874 36.1878 50 35.6144 50 35.0163C50 34.4183 49.5874 33.8446 48.8528 33.4215L26.6875 20.6583C25.9528 20.2354 24.9563 19.9976 23.9174 19.9974C22.8784 19.9972 21.882 20.2346 21.1472 20.6572Z" fill="#0A3641"/>
+                    </g>
+                </svg>
+            </div>
         </div>
     </section>
     <section class="collections">
@@ -471,6 +483,7 @@
         </div>
     </footer>
 </body>
+<script src="js/slider.js"></script>
 <script>
     // change theme to dark while hovering
     function changeTheme() {
@@ -485,7 +498,7 @@
         logo.alt = 'Rainydays logo dark';
     }
 </script>
-<script src="js/media.js"></script>
+<script src="js/burger.js"></script>
 <script>
     // Retrieve the cart from local storage
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
