--- a/contacts.html
+++ b/contacts.html
@@ -326,7 +326,7 @@
         </div>
     </footer>
 </body>
-<script src="js/media.js"></script>
+<script src="js/burger.js"></script>
 <script>
     // Retrieve the cart from local storage
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
