--- a/jacket.html
+++ b/jacket.html
@@ -712,7 +712,7 @@
         }
     }
 </script>
-<script src="js/media.js"></script>
+<script src="js/burger.js"></script>
 <script src="js/addtocart.js"></script>
 
 </html>
