--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
+    <script type="module" src="js/shoppingCart.js" defer></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -371,6 +372,4 @@
         </div>
     </footer>
 </body>
-<script src="js/burger.js"></script>
-<script src="js/shoppingCart.js"></script>
 </html>
