--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
+    <script src="js/burger.js" defer></script>
+    <script type="module" src="js/cartIconDisplay.mjs"></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -118,11 +120,11 @@
                 <div class="map" id="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2105.727078456321!2d7.992172077501338!3d58.14474447406246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4638025e174ab2f5%3A0xc879945b1107802c!2sMarkens%20gate%2C%20Kristiansand%2C%20Norway!5e0!3m2!1sen!2s!4v1699073580557!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <form action="#" class="contacts__form flex" method="post">
-                    <input type="text" name="fullname" placeholder="Fullname">
-                    <input type="email" name="email" placeholder="Email">
-                    <input type="tel" name="phonenumber" placeholder="Phone Number">
-                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                <form action="#" class="contacts__form flex">
+                    <input type="text" name="fullname" placeholder="Fullname" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="tel" name="phonenumber" placeholder="Phone Number" required>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
                     <button class="btn-reset sendMessage" type="submit">SEND</button>
                 </form>
             </div>
@@ -326,8 +328,7 @@
         </div>
     </footer>
 </body>
-<script src="js/burger.js"></script>
-<script>
+<!-- <script>
     // Retrieve the cart from local storage
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
@@ -341,5 +342,5 @@
         // Apply active state to icon
         cartIcon.classList.add('active');
     }
-</script>
+</script> -->
 </html>
