--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
+    <script type="module" src="js/payment.js" defer></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/global.css">
@@ -427,48 +430,6 @@
         </div>
     </footer>
 </body>
-<script> 
-    // placeholder svg change in inputs
-    const inputNumber = document.querySelector('.card-details input:first-child');
-    const inputCVV = document.querySelector('.input-decor');
-    const inputs = [inputNumber, inputCVV];
-
-
-    inputs.forEach(function (item) {
-
-        item.addEventListener('input', function () {
-            const originalBackground = getComputedStyle(item).background;
-
-            if (this.value.length > 0) {
-                this.style.background = 'none';
-            } else {
-                this.style.background = originalBackground;
-            }
-        });
-    });
-
-</script>
-<script>
-    // to allow to input with spacing
-    const cardNumberInput = document.getElementById('cardnumber');
-
-    cardNumberInput.addEventListener('input', function () {
-        let inputValue = this.value.replace(/ /g, ''); // Remove any existing spaces
-        let formattedValue = '';
-
-        for (let i = 0; i < inputValue.length; i++) {
-            if (i > 0 && i % 4 === 0) {
-                formattedValue += ' '; // Add a space every 4 characters
-            }
-            formattedValue += inputValue[i];
-        }
-
-        this.value = formattedValue;
-    });
-
-</script>
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
 <script>
     // initializing tippy js
     tippy('[data-tippy-content]');
@@ -477,35 +438,5 @@
         content: '3 digits on the back of your card',
         placement: 'bottom',
     })
-</script>
-<script>
-    // switching active state between payment options
-    const paymentIcons = document.querySelectorAll('.payment__options svg');
-    paymentIcons.forEach(function(element) {
-
-        element.addEventListener('click', function () {
-            paymentIcons.forEach(item => {
-                item.classList.remove('active-payment-svg')
-            });
-            
-            element.classList.add('active-payment-svg');
-        });
-    });
-</script>
-<script src="js/burger.js"></script>
-<script>
-    // Retrieve the cart from local storage
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-
-    // Calculate total quantity
-    const totalQuantity = cart.reduce((total, item) => total + item.quantity, 0);
-
-    if(totalQuantity != 0) {
-        // Update the data-quantity attribute if true
-        const cartIcon = document.querySelector('.cart-icon');
-        cartIcon.setAttribute('data-quantity', totalQuantity.toString());
-        // Apply active state to icon
-        cartIcon.classList.add('active');
-    }
 </script>
 </html>
