changed total cost calculation in shoppingCart.js

--- a/cart.html
+++ b/cart.html
@@ -104,7 +104,7 @@
                     <div class="main-content flex">
                         <div class="pay-details">
                             <p class="details__desc">
-                                <span>Product price</span><br>
+                                <span>Total price</span><br>
                                 <span>Total tax</span><br>
                                 <span>Total discount</span>
                             </p>
