display fetched products on homepage

--- a/index.html
+++ b/index.html
@@ -130,77 +130,77 @@
             <div class="carousel flex">
                 <div class="slide index0">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="red rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="red rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index1">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">The Yoko Jacke
                         <br>$350.00</p>
                 </div>
                 <div class="slide index2">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Belgravia High Top
                         <br>$250.00</p>
                 </div>
                 <div class="slide index3">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">MyGica Rain Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index4">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Maxima hoodie
                         <br>$100.00</p>
                 </div>
                 <div class="slide index5">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-6.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-6.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index6">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-1.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index7">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-2.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index8">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-3.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index9">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-4.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
                 </div>
                 <div class="slide index10">
                     <div class="slide-image">
-                        <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a>
+                        <!-- <a href="jacket.html"><img src="assets/images/jacket-5.webp" alt="rainydays jacket"></a> -->
                     </div>
                     <p class="slide-text">Fit Bomber Jacket
                         <br>$200.00</p>
