change nav links to women/men.html

--- a/men.html
+++ b/men.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of jackets</title>
+    <title>List of jackets for men</title>
     <script type="module" src="js/list.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
     <link rel="stylesheet" href="src/css/normalize.css">
@@ -90,7 +90,7 @@
         <ul class="panel__list list-reset"></ul>
     </nav>
     <div class="container" id="lj">
-        <h1 class="page-title" tabindex="0">FOR WOMEN</h1>
+        <h1 class="page-title" tabindex="0">FOR MEN</h1>
         <div class="grid-container-ls">
             <aside class="sidebar flex">
                 <div class="top__item-1">
