--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         <a class="nav__link" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="list.html">Men</a>
+                        <a class="nav__link" href="men.html">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="list.html">Women</a>
+                        <a class="nav__link" href="women.html">Women</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" href="list.html">Kids</a>
