--- a/women.html
+++ b/women.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of jackets</title>
+    <title>List of jackets for women</title>
     <script type="module" src="js/list.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
     <link rel="stylesheet" href="src/css/normalize.css">
