displayed fetched product on list.hmtl & jacket.html

--- a/jacket.html
+++ b/jacket.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacket specific page</title>
     <script type="module" src="js/addtocart.js" defer></script>
+    <script type="module" src="js/jacket.js" defer></script>
     <script src="js/burger.js" defer></script>
     <script src="js/popup.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
@@ -119,12 +120,12 @@
             </div>
             <div class="top__item-2">
                 <div class="target-image">
-                    <img src="assets/images/jacket-11.webp" alt="">
+                    <img alt="">
                 </div>
                 <div class="image-parts flex">
-                    <img src="assets/images/jacket-11.webp" alt="">
-                    <img src="assets/images/jacket-11.webp" alt="">
-                    <img src="assets/images/jacket-11.webp" alt="">
+                    <img alt="">
+                    <img alt="">
+                    <img alt="">
                 </div>
             </div>
             <div class="top__item-3">
@@ -225,6 +226,7 @@
                             <option value="m">M</option>
                             <option value="l">L</option>
                             <option value="xl">XL</option>
+                            <option value="xxl">XXL</option>
                         </select>
                     </div>
                 </div>
