--- a/jacket.html
+++ b/jacket.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacket specific page</title>
-    <script type="module" src="js/addtocart.js" defer></script>
-    <script type="module" src="js/jacket.js" defer></script>
+    <script type="module" src="js/addtocart.js"></script>
+    <script type="module" src="js/jacket.js"></script>
     <script src="js/burger.js" defer></script>
     <script src="js/popup.js" defer></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
