--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of jackets</title>
-    <script type="module" src="js/list.js" defer></script>
+    <script type="module" src="js/list.js"></script>
     <link rel="stylesheet" href="src/css/choices.min.css">
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/variables.css">
